[gd_scene load_steps=2 format=3 uid="uid://dlkcut5teoelt"]

[ext_resource type="Script" uid="uid://xvavbml7p85b" path="res://example/scenes/hud.gd" id="1_6nsy5"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6nsy5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -323.0
offset_bottom = 110.0
grow_horizontal = 0

[node name="ReloadButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "重新加载场景"

[node name="SaveButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "保存游戏数据"

[node name="LoadDataButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "加载游戏数据"

[connection signal="pressed" from="Control/VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LoadDataButton" to="." method="_on_load_data_button_pressed"]
